# onemanager_tauri

./: .gitignore  README.md  biome.json  boarding.html  components.json  index.html  package.json  pnpm-lock.yaml  settings.html  tailwind.config.js  tsconfig.json  vite.config.ts
public/icons/: Arc.appinstaller
scripts/: rename.js
src/: App.svelte  app.pcss  main.ts  settings.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/iconExtract/: main.py
src-tauri/src/: main.rs
src-tauri/src/commands/: current_music.rs  get_windows_apps.rs  programs.rs  search.rs
src-tauri/src/commands/utils/: add_drive_to_file.rs  file_exist.rs  file_name_without_extension.rs  generate_icon.rs  get_app_name_from_path.rs  get_app_path_from_name.rs  replace_double_backslashes.rs  sanitize_path.rs
src-tauri/src/db/: migrations.rs
src-tauri/src/db/migrations/: tables.sql
src-tauri/src/structs/: current_song.rs  program.rs
src/db/: db.ts
src/lib/components/main/: Music.svelte
src/lib/components/settings/: Apps.svelte  Integrations.svelte  Preferences.svelte  config.ts  icons.ts  nav.svelte
src/pages/boarding/: Boarding.svelte  boarding.ts
src/pages/components/boarding/: Browser.svelte  Favourites.svelte  (+2 more)
src/pages/settings/: Settings.svelte  settings.ts
src/services/auth/: callback.template.ts  index.ts
src/services/firebase/: app.ts  auth.ts
src/types/: apps.ts  browsers.ts  current_song.ts  integrations.ts  programs_payload.ts
src/utils/: createSettingsWindow.ts  delay.ts  fixBackslahes.ts  getAppNameFromPath.ts  sortPathsByFileNames.ts
(+17 files in other folders)
