[package]
name = "onemanager"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [
    "window-hide",
    "window-show",
    "shell-sidecar",
    "window-close",
    "window-start-dragging",
    "window-create",
    "window-set-focus",
    "window-unminimize",
    "global-shortcut-all",
    "window-minimize",
    "shell-open",
    "process-command-api",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
installed = "=0.1.0"
walkdir = "2.3.2"
lnk = "0.5.1"
encoding_rs = "0.8.33"
dotenv = "0.15.0"
tauri-plugin-oauth = { git = "https://github.com/FabianLars/tauri-plugin-oauth", branch = "main" }

[dependencies.tauri-plugin-sql]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v1"
features = ["postgres"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
